--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <div class="container">
         <div class="pantalla">
-            <h1></h1>
+            <div class="juego"></div>
+            <div class="controladores">
+                
+            </div>
         </div>
     </div>
 </body>
