Agrego cronometro y puntaje

--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
 <body>
     <div class="container">
         <div class="pantalla">
-            <div class="juego"></div>
-            <div class="controladores">
+            <div class="juego">
                 
+            </div>
+            <div class="controladores">
+                <div class="cronometro">
+                    <span>Tiempo:</span>
+                    <span>0:00</span>
+                </div>
+                <div class="puntaje">
+                    <span>Puntaje: </span>
+                    <span>0</span>
+                </div>
             </div>
         </div>
     </div>
