Creo cards index y estilos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,24 @@
     <div class="container">
         <div class="pantalla">
             <div class="juego">
-                
+                <div class="cards">
+                    <div class="contenidoCard">
+                        <div class="imgCard">
+                            <img src="images/cerezas.png" alt="Cerezas Card">
+                        </div>
+                        <div class="titleCard">
+                            <span>Cerezas</span>
+                        </div>
+                    </div>
+                    <div class="contenidoCard">
+                        <div class="imgCard">
+                            <img src="images/cerezas.png" alt="Cerezas Card">
+                        </div>
+                        <div class="titleCard">
+                            <span>Cerezas</span>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="controladores">
                 <div class="cronometro">
