--- a/index.html
+++ b/index.html
@@ -9,26 +9,36 @@
 <body>
     <div class="container">
         <div class="pantalla">
+
             <div class="juego">
                 <div class="cards">
-                    <div class="contenidoCard">
+                    <div id="Card" class="contenidoCard">
                         <div class="imgCard">
                             <img src="images/cerezas.png" alt="Cerezas Card">
                         </div>
+
+                        <img id="imagen"  class="back" src="images/texturaNaranja.jpeg" alt=""> 
+
                         <div class="titleCard">
                             <span>Cerezas</span>
                         </div>
                     </div>
-                    <div class="contenidoCard">
+
+                    <div id="Card2" class="contenidoCard">
                         <div class="imgCard">
                             <img src="images/cerezas.png" alt="Cerezas Card">
                         </div>
+
+                        <img id="imagen2" class="back" src="images/texturaAmarilla.jpeg" alt="">
+
                         <div class="titleCard">
                             <span>Cerezas</span>
                         </div>
                     </div>
                 </div>
             </div>
+
+
             <div class="controladores">
                 <div class="cronometro">
                     <span>Tiempo:</span>
@@ -39,7 +49,10 @@
                     <span>0</span>
                 </div>
             </div>
+
         </div>
     </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
