finalizo diseño de cartas

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
         <div class="pantalla">
 
             <div class="juego">
+
                 <div class="cards">
-                    <div id="Card" class="contenidoCard">
+
+                    <div id="Card" class="contenidoCard frutaRoja">
                         <div class="imgCard">
                             <img src="images/cerezas.png" alt="Cerezas Card">
                         </div>
@@ -24,20 +26,188 @@
                         </div>
                     </div>
 
-                    <div id="Card2" class="contenidoCard">
+                    <div id="Card2" class="contenidoCard frutaMorada">
                         <div class="imgCard">
-                            <img src="images/cerezas.png" alt="Cerezas Card">
+                            <img src="images/uvas.png" alt="Uvas Card">
                         </div>
 
                         <img id="imagen2" class="back" src="images/texturaAmarilla.jpeg" alt="">
 
                         <div class="titleCard">
+                            <span>Uvas</span>
+                        </div>
+                    </div>
+
+                    <div id="Card3" class="contenidoCard frutaMorada">
+                        <div class="imgCard">
+                            <img src="images/mora.png" alt="Moras Card">
+                        </div>
+
+                        <img id="imagen3"  class="back" src="images/texturaNaranja.jpeg" alt=""> 
+
+                        <div class="titleCard">
+                            <span>Mora</span>
+                        </div>
+                    </div>
+
+                    <div id="Card4" class="contenidoCard frutaNaranja" >
+                        <div class="imgCard">
+                            <img src="images/naranja.png" alt="Naranja Card">
+                        </div>
+
+                        <img id="imagen4" class="back" src="images/texturaAmarilla.jpeg" alt="">
+
+                        <div class="titleCard">
+                            <span>Naranja</span>
+                        </div>
+                    </div>
+
+                    <div id="Card5" class="contenidoCard frutaVerde">
+                        <div class="imgCard">
+                            <img src="images/pera.png" alt="Pera Card">
+                        </div>
+
+                        <img id="imagen5"  class="back" src="images/texturaNaranja.jpeg" alt=""> 
+
+                        <div class="titleCard">
+                            <span>Pera</span>
+                        </div>
+                    </div>
+
+                    <div id="Card6" class="contenidoCard frutaAmarilla" >
+                        <div class="imgCard">
+                            <img src="images/platano.png" alt="Banana Card">
+                        </div>
+
+                        <img id="imagen6" class="back" src="images/texturaAmarilla.jpeg" alt="">
+
+                        <div class="titleCard">
+                            <span>Banana</span>
+                        </div>
+                    </div>
+
+                    <div id="Card7" class="contenidoCard frutaRoja" >
+                        <div class="imgCard">
+                            <img src="images/manzana.png" alt="Manzanas Card">
+                        </div>
+
+                        <img id="imagen7"  class="back" src="images/texturaAmarilla.jpeg" alt=""> 
+
+                        <div class="titleCard">
+                            <span>Manzanas</span>
+                        </div>
+                    </div>
+
+                    <div id="Card8" class="contenidoCard frutaVerde" >
+                        <div class="imgCard">
+                            <img src="images/sandia.png" alt="Sandia Card">
+                        </div>
+
+                        <img id="imagen8" class="back" src="images/texturaNaranja.jpeg" alt="">
+
+                        <div class="titleCard">
+                            <span>Sandia</span>
+                        </div>
+                    </div>
+
+                    <div id="Card9" class="contenidoCard frutaRoja">
+                        <div class="imgCard">
+                            <img src="images/cerezas.png" alt="Cerezas Card">
+                        </div>
+
+                        <img id="imagen9"  class="back" src="images/texturaAmarilla.jpeg" alt=""> 
+
+                        <div class="titleCard">
                             <span>Cerezas</span>
                         </div>
                     </div>
+
+                    <div id="Card10" class="contenidoCard frutaMorada">
+                        <div class="imgCard">
+                            <img src="images/uvas.png" alt="Uvas Card">
+                        </div>
+
+                        <img id="imagen10" class="back" src="images/texturaNaranja.jpeg" alt="">
+
+                        <div class="titleCard">
+                            <span>Uvas</span>
+                        </div>
+                    </div>
+
+                    <div id="Card11" class="contenidoCard frutaMorada">
+                        <div class="imgCard">
+                            <img src="images/mora.png" alt="Moras Card">
+                        </div>
+
+                        <img id="imagen11"  class="back" src="images/texturaAmarilla.jpeg" alt=""> 
+
+                        <div class="titleCard">
+                            <span>Mora</span>
+                        </div>
+                    </div>
+
+                    <div id="Card12" class="contenidoCard frutaNaranja" >
+                        <div class="imgCard">
+                            <img src="images/naranja.png" alt="Naranja Card">
+                        </div>
+
+                        <img id="imagen12" class="back" src="images/texturaNaranja.jpeg" alt="">
+
+                        <div class="titleCard">
+                            <span>Naranja</span>
+                        </div>
+                    </div>
+
+                    <div id="Card13" class="contenidoCard frutaVerde">
+                        <div class="imgCard">
+                            <img src="images/pera.png" alt="Pera Card">
+                        </div>
+
+                        <img id="imagen13"  class="back" src="images/texturaAmarilla.jpeg" alt=""> 
+
+                        <div class="titleCard">
+                            <span>Pera</span>
+                        </div>
+                    </div>
+
+                    <div id="Card14" class="contenidoCard frutaAmarilla" >
+                        <div class="imgCard">
+                            <img src="images/platano.png" alt="Banana Card">
+                        </div>
+
+                        <img id="imagen14" class="back" src="images/texturaNaranja.jpeg" alt="">
+
+                        <div class="titleCard">
+                            <span>Banana</span>
+                        </div>
+                    </div>
+
+                    <div id="Card15" class="contenidoCard frutaRoja" >
+                        <div class="imgCard">
+                            <img src="images/manzana.png" alt="Manzanas Card">
+                        </div>
+
+                        <img id="imagen15"  class="back" src="images/texturaAmarilla.jpeg" alt=""> 
+
+                        <div class="titleCard">
+                            <span>Manzanas</span>
+                        </div>
+                    </div>
+
+                    <div id="Card16" class="contenidoCard frutaVerde" >
+                        <div class="imgCard">
+                            <img src="images/sandia.png" alt="Sandia Card">
+                        </div>
+
+                        <img id="imagen16" class="back" src="images/texturaNaranja.jpeg" alt="">
+
+                        <div class="titleCard">
+                            <span>Sandia</span>
+                        </div>
+                    </div>
+
                 </div>
             </div>
-
 
             <div class="controladores">
                 <div class="cronometro">
@@ -53,6 +223,6 @@
         </div>
     </div>
 
-    <script src="index.js"></script>
+    <script src="quitarFondos.js"></script>
 </body>
 </html>
