cambio de lugar de 4 cartas

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                         </div>
                     </div>
 
-                    <div id="Card5" class="contenidoCard frutaVerde">
+                    <div id="Card5" class="contenidoCard frutaAmarilla">
                         <div class="imgCard">
-                            <img src="images/pera.png" alt="Pera Card">
+                            <img src="images/platano.png" alt="Banana Card">
                         </div>
 
                         <img id="imagen5"  class="back" src="images/texturaNaranja.jpeg" alt=""> 
@@ -74,9 +74,9 @@
                         </div>
                     </div>
 
-                    <div id="Card6" class="contenidoCard frutaAmarilla" >
+                    <div id="Card6" class="contenidoCard frutaVerde" >
                         <div class="imgCard">
-                            <img src="images/platano.png" alt="Banana Card">
+                            <img src="images/pera.png" alt="Pera Card">
                         </div>
 
                         <img id="imagen6" class="back" src="images/texturaAmarilla.jpeg" alt="">
@@ -134,9 +134,9 @@
                         </div>
                     </div>
 
-                    <div id="Card11" class="contenidoCard frutaMorada">
+                    <div id="Card11" class="contenidoCard frutaNaranja">
                         <div class="imgCard">
-                            <img src="images/mora.png" alt="Moras Card">
+                            <img src="images/naranja.png" alt="Naranja Card">
                         </div>
 
                         <img id="imagen11"  class="back" src="images/texturaAmarilla.jpeg" alt=""> 
@@ -146,9 +146,9 @@
                         </div>
                     </div>
 
-                    <div id="Card12" class="contenidoCard frutaNaranja" >
+                    <div id="Card12" class="contenidoCard frutaMorada" >
                         <div class="imgCard">
-                            <img src="images/naranja.png" alt="Naranja Card">
+                            <img src="images/mora.png" alt="Mora Card">
                         </div>
 
                         <img id="imagen12" class="back" src="images/texturaNaranja.jpeg" alt="">
