añado boton de jugar y nuevo script

--- a/index.html
+++ b/index.html
@@ -214,6 +214,9 @@
                     <span>Tiempo:</span>
                     <span>0:00</span>
                 </div>
+                <div id="botonJugar" class="botonJuego">
+                    <span>Jugar</span>
+                </div>
                 <div class="puntaje">
                     <span>Puntaje: </span>
                     <span>0</span>
@@ -224,5 +227,7 @@
     </div>
 
     <script src="quitarFondos.js"></script>
+    <script src="ponerFondos.js"></script>
+
 </body>
 </html>
