agrego script del temporizador

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <div class="controladores">
                 <div class="cronometro">
                     <span>Tiempo:</span>
-                    <span>0:00</span>
+                    <span id="temporizador">0:00</span>
                 </div>
                 <div id="botonJugar" class="botonJuego">
                     <span>Jugar</span>
@@ -228,6 +228,7 @@
 
     <script src="quitarFondos.js"></script>
     <script src="ponerFondos.js"></script>
+    <script src="temporizador.js"></script>
 
 </body>
 </html>
