finalizo animaciones de respaldo de las cartas

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <span id="temporizador">0:00</span>
                 </div>
                 <div id="botonJugar" class="botonJuego">
-                    <span>Jugar</span>
+                    <span id="txt">Jugar</span>
                 </div>
                 <div class="puntaje">
                     <span>Puntaje: </span>
@@ -227,7 +227,6 @@
     </div>
 
     <script src="quitarFondos.js"></script>
-    <script src="ponerFondos.js"></script>
     <script src="temporizador.js"></script>
 
 </body>
