se remueve archivo ponerFondos se cambia nombre del js y se actualiza etiqueta script en html

--- a/index.html
+++ b/index.html
@@ -226,8 +226,7 @@
         </div>
     </div>
 
-    <script src="quitarFondos.js"></script>
-    <script src="temporizador.js"></script>
+    <script src="index.js"></script>
 
 </body>
 </html>
