--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
                 <div class="cards">
 
-                    <div id="Card" class="contenidoCard frutaRoja">
+                    <div id="Card" class="contenidoCard frutaRoja" data-value="1">
                         <div class="imgCard">
                             <img src="images/cerezas.png" alt="Cerezas Card">
                         </div>
@@ -26,7 +26,7 @@
                         </div>
                     </div>
 
-                    <div id="Card2" class="contenidoCard frutaMorada">
+                    <div id="Card2" class="contenidoCard frutaMorada" data-value="2">
                         <div class="imgCard">
                             <img src="images/uvas.png" alt="Uvas Card">
                         </div>
@@ -38,7 +38,7 @@
                         </div>
                     </div>
 
-                    <div id="Card3" class="contenidoCard frutaMorada">
+                    <div id="Card3" class="contenidoCard frutaMorada" data-value="3">
                         <div class="imgCard">
                             <img src="images/mora.png" alt="Moras Card">
                         </div>
@@ -50,7 +50,7 @@
                         </div>
                     </div>
 
-                    <div id="Card4" class="contenidoCard frutaNaranja" >
+                    <div id="Card4" class="contenidoCard frutaNaranja" data-value="4">
                         <div class="imgCard">
                             <img src="images/naranja.png" alt="Naranja Card">
                         </div>
@@ -62,7 +62,7 @@
                         </div>
                     </div>
 
-                    <div id="Card5" class="contenidoCard frutaAmarilla">
+                    <div id="Card5" class="contenidoCard frutaAmarilla" data-value="5">
                         <div class="imgCard">
                             <img src="images/platano.png" alt="Banana Card">
                         </div>
@@ -74,7 +74,7 @@
                         </div>
                     </div>
 
-                    <div id="Card6" class="contenidoCard frutaVerde" >
+                    <div id="Card6" class="contenidoCard frutaVerde" data-value="6">
                         <div class="imgCard">
                             <img src="images/pera.png" alt="Pera Card">
                         </div>
@@ -86,7 +86,7 @@
                         </div>
                     </div>
 
-                    <div id="Card7" class="contenidoCard frutaRoja" >
+                    <div id="Card7" class="contenidoCard frutaRoja" data-value="7">
                         <div class="imgCard">
                             <img src="images/manzana.png" alt="Manzanas Card">
                         </div>
@@ -98,7 +98,7 @@
                         </div>
                     </div>
 
-                    <div id="Card8" class="contenidoCard frutaVerde" >
+                    <div id="Card8" class="contenidoCard frutaVerde" data-value="8">
                         <div class="imgCard">
                             <img src="images/sandia.png" alt="Sandia Card">
                         </div>
@@ -110,7 +110,7 @@
                         </div>
                     </div>
 
-                    <div id="Card9" class="contenidoCard frutaRoja">
+                    <div id="Card9" class="contenidoCard frutaRoja" data-value="1">
                         <div class="imgCard">
                             <img src="images/cerezas.png" alt="Cerezas Card">
                         </div>
@@ -122,7 +122,7 @@
                         </div>
                     </div>
 
-                    <div id="Card10" class="contenidoCard frutaMorada">
+                    <div id="Card10" class="contenidoCard frutaMorada" data-value="2">
                         <div class="imgCard">
                             <img src="images/uvas.png" alt="Uvas Card">
                         </div>
@@ -134,7 +134,7 @@
                         </div>
                     </div>
 
-                    <div id="Card11" class="contenidoCard frutaNaranja">
+                    <div id="Card11" class="contenidoCard frutaNaranja" data-value="4">
                         <div class="imgCard">
                             <img src="images/naranja.png" alt="Naranja Card">
                         </div>
@@ -146,7 +146,7 @@
                         </div>
                     </div>
 
-                    <div id="Card12" class="contenidoCard frutaMorada" >
+                    <div id="Card12" class="contenidoCard frutaMorada" data-value="3" >
                         <div class="imgCard">
                             <img src="images/mora.png" alt="Mora Card">
                         </div>
@@ -158,7 +158,7 @@
                         </div>
                     </div>
 
-                    <div id="Card13" class="contenidoCard frutaVerde">
+                    <div id="Card13" class="contenidoCard frutaVerde" data-value="6">
                         <div class="imgCard">
                             <img src="images/pera.png" alt="Pera Card">
                         </div>
@@ -170,7 +170,7 @@
                         </div>
                     </div>
 
-                    <div id="Card14" class="contenidoCard frutaAmarilla" >
+                    <div id="Card14" class="contenidoCard frutaAmarilla" data-value="5">
                         <div class="imgCard">
                             <img src="images/platano.png" alt="Banana Card">
                         </div>
@@ -182,7 +182,7 @@
                         </div>
                     </div>
 
-                    <div id="Card15" class="contenidoCard frutaRoja" >
+                    <div id="Card15" class="contenidoCard frutaRoja" data-value="7">
                         <div class="imgCard">
                             <img src="images/manzana.png" alt="Manzanas Card">
                         </div>
@@ -194,7 +194,7 @@
                         </div>
                     </div>
 
-                    <div id="Card16" class="contenidoCard frutaVerde" >
+                    <div id="Card16" class="contenidoCard frutaVerde" data-value="8" >
                         <div class="imgCard">
                             <img src="images/sandia.png" alt="Sandia Card">
                         </div>
@@ -219,7 +219,7 @@
                 </div>
                 <div class="puntaje">
                     <span>Puntaje: </span>
-                    <span>0</span>
+                    <span id="score">0</span>
                 </div>
             </div>
 
