--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         </div>
                     </div>
 
-                    <div id="Card9" class="contenidoCard frutaRoja" data-value="1">
+                    <div id="Card9" class="contenidoCard frutaRoja" data-value="9">
                         <div class="imgCard">
                             <img src="images/cerezas.png" alt="Cerezas Card">
                         </div>
@@ -122,7 +122,7 @@
                         </div>
                     </div>
 
-                    <div id="Card10" class="contenidoCard frutaMorada" data-value="2">
+                    <div id="Card10" class="contenidoCard frutaMorada" data-value="10">
                         <div class="imgCard">
                             <img src="images/uvas.png" alt="Uvas Card">
                         </div>
@@ -134,7 +134,7 @@
                         </div>
                     </div>
 
-                    <div id="Card11" class="contenidoCard frutaNaranja" data-value="4">
+                    <div id="Card11" class="contenidoCard frutaNaranja" data-value="11">
                         <div class="imgCard">
                             <img src="images/naranja.png" alt="Naranja Card">
                         </div>
@@ -146,7 +146,7 @@
                         </div>
                     </div>
 
-                    <div id="Card12" class="contenidoCard frutaMorada" data-value="3" >
+                    <div id="Card12" class="contenidoCard frutaMorada" data-value="12" >
                         <div class="imgCard">
                             <img src="images/mora.png" alt="Mora Card">
                         </div>
@@ -158,7 +158,7 @@
                         </div>
                     </div>
 
-                    <div id="Card13" class="contenidoCard frutaVerde" data-value="6">
+                    <div id="Card13" class="contenidoCard frutaVerde" data-value="13">
                         <div class="imgCard">
                             <img src="images/pera.png" alt="Pera Card">
                         </div>
@@ -170,7 +170,7 @@
                         </div>
                     </div>
 
-                    <div id="Card14" class="contenidoCard frutaAmarilla" data-value="5">
+                    <div id="Card14" class="contenidoCard frutaAmarilla" data-value="14">
                         <div class="imgCard">
                             <img src="images/platano.png" alt="Banana Card">
                         </div>
@@ -182,7 +182,7 @@
                         </div>
                     </div>
 
-                    <div id="Card15" class="contenidoCard frutaRoja" data-value="7">
+                    <div id="Card15" class="contenidoCard frutaRoja" data-value="15">
                         <div class="imgCard">
                             <img src="images/manzana.png" alt="Manzanas Card">
                         </div>
@@ -194,7 +194,7 @@
                         </div>
                     </div>
 
-                    <div id="Card16" class="contenidoCard frutaVerde" data-value="8" >
+                    <div id="Card16" class="contenidoCard frutaVerde" data-value="16" >
                         <div class="imgCard">
                             <img src="images/sandia.png" alt="Sandia Card">
                         </div>
@@ -227,6 +227,7 @@
     </div>
 
     <script src="index.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 </body>
 </html>
