Actualizacion JUEGO TERMINADO

--- a/index.html
+++ b/index.html
@@ -217,6 +217,9 @@
                 <div id="botonJugar" class="botonJuego">
                     <span id="txt">Jugar</span>
                 </div>
+                <div class="botonJuego">
+                    <a id="txt" href="index.html">Volver a Jugar</a>
+                </div>
                 <div class="puntaje">
                     <span>Puntaje: </span>
                     <span id="score">0</span>
